--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,3 +1,2 @@
 FROM almalinux
-ADD [https://github.com/Priya-1123/dockerfile]
-
+ADD https://github.com/Priya-1123/sunbird-data-pipeline/tree/master/ansible
