--- a/USER/Dockerfile
+++ b/USER/Dockerfile
@@ -1,5 +1,4 @@
 FROM almalinux
-RUN add user priya
-USER priya
-RUN touch /temp/priya.txt
-
+RUN adduser Priya
+USER Priya
+RUN touch /USER/hello.txt 
